2008-01-02  Wakaba  <wakaba@suika.fam.cx>

	* Parser.pm (text-align, text-transform, white-space,
	caption-side, table-layout, border-collapse, empty-cells,
	outline-style, text-decoration): Implemented.

2008-01-02  Wakaba  <wakaba@suika.fam.cx>

	* Cascade.pm (get_computed_value): Even when |inherit| is specified
	the value is resolved into the computed value by the |{compute}|
	code to support edge cases not mentioned in the CSS 2.1 spec (see
	<http://suika.fam.cx/gate/2005/sw/inherit>).

2008-01-02  Wakaba  <wakaba@suika.fam.cx>

	* Cascade.pm (get_computed_value): Resolve initial value referred
	when |inherit| is specified as if it were the specified value.

	* Parser.pm: Some properties were incorrectly marked as
	inherited.
	(background-repeat, background-attachment, font-style,
	font-variant, font-weight, background-image, font-family): Implemented.

2008-01-01  Wakaba  <wakaba@suika.fam.cx>

	* Parser.pm: Give |list-style-image|'s compute function a name.

2008-01-01  Wakaba  <wakaba@suika.fam.cx>

	* Parser.pm: Give |list-style-image|'s parser a name.  Bug fix
	on base URI scalar reference.

2008-01-01  Wakaba  <wakaba@suika.fam.cx>

	* Parser.pm (page-break-before, page-break-after, page-break-inside, 
	orphans, widows, list-style): Added.
	(z-index): Support for negative values.

2008-01-01  Wakaba  <wakaba@suika.fam.cx>

	* Parser.pm: Set |manakai_base_uri| attribute of the 
	created |CSSStyleSheet| object.
	More properties from CSS 2.1 are implemented.

2008-01-01  Wakaba  <wakaba@suika.fam.cx>

	* Cascade.pm: The |use strict| line was missing!!!!!!!!!11
	(get_computed_value): Support for the |inherit| value.

	* Parser.pm: The |inherit| value is represented by new |INHERIT|
	value type, rather than |KEYWORD|.
	(position): The initial value was incorrect.

2008-01-01  Wakaba  <wakaba@suika.fam.cx>

	* Cascade.pm (get_cascaded_value): It now should return |undef|
	for shorthand properties.
	(get_specified_value, get_computed_value): New methods.
