@@ -1,5 +1,12 @@
 2008-01-02  Wakaba  <wakaba@suika.fam.cx>
 
+	* Cascade.pm (get_cascaded_value): "*"-only declaration blocks
+	were ignored.
+
+	* Parser.pm (cursor): Implemented.
+
+2008-01-02  Wakaba  <wakaba@suika.fam.cx>
+
 	* Parser.pm (text-align, text-transform, white-space,
 	caption-side, table-layout, border-collapse, empty-cells,
 	outline-style, text-decoration): Implemented.
